# click-prism

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/actions/unit_test/: action.yml
.github/workflows/: _unit_tests.yml  pull_request_to_main.yml  push_to_branch.yml  push_to_main.yml  release_tag.yml
click_prism/: __init__.py  _config.py  _environment.py  _exceptions.py
click_prism/_theme/: __init__.py  defaults.py  types.py
click_prism/_tree/: __init__.py  build.py  discover.py  filter.py  node.py  params.py
design/: 0_conventions.md  index.md
design/1_analysis/1_ecosystem_state/: 1_1_1_core_packages.md  1_1_2_competing_packages.md  1_1_3_related_packages.md  1_1_4_synthesis.md
design/1_analysis/2_status_quo/: 1_2_1_core_packages.md  1_2_2_competing_packages.md  1_2_3_related_packages.md
design/2_vision/: 2_1_terminology.md  2_2_philosophy.md  2_3_1_plain_click.md  2_3_2_rich.md  2_3_3_composability.md  2_3_4_requirements.md  2_3_ux.md
design/3_design/: 3_0_overview.md  3_1_configuration.md  3_2_tree_model.md  3_3_1_plain_text.md  3_3_2_rich.md  3_3_3_json.md  3_3_rendering.md  3_4_1_class_architecture.md  3_4_2_integration_points.md  3_4_3_public_api.md  3_4_architecture.md  3_5_composability.md
design/4_infrastructure/: 4_0_overview.md  4_1_project_setup.md  4_2_code_quality.md  4_3_test_infrastructure.md  4_4_ci_cd.md  4_5_documentation.md
design/5_implementation/: 5_0_overview.md  5_10_phase_9_composability.md  5_11_phase_10_polish.md  5_1_phase_0_infrastructure.md  5_2_phase_1_standalone_rendering.md  5_3_phase_2_prism_group.md  5_4_phase_3_help_json.md  5_5_phase_4_tree_command.md  5_6_phase_5_tree_as_help_modes.md  5_7_phase_6_parameter_display.md  5_8_phase_7_rich_rendering.md  5_9_phase_8_rich_theming.md
design/_examples/cli/: example_cli.py  example_click_aliases.py  example_click_command_tree.py  example_click_default_group.py  example_click_didyoumean.py  example_click_extra.py  example_click_help_colors.py  example_cloup.py  example_rich_click.py  example_rich_tree.py  pyproject.toml
docs/: index.md
scripts/: extract_changelog.py  release.py
tests/: conftest.py  test_config.py  test_environment.py  test_import.py  test_invariants.py
tests/test_theme/: test_defaults.py
tests/test_tree/: _helpers.py  test_build.py  test_filter.py  test_params.py
(+62 files in other folders)
