[project]
name = "click-prism"
version = "0.0.0"
description = "Tree visualization for Click command hierarchies."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Bert Pluymers", email = "bert.pluymers@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]
keywords = ["cli", "click", "tree", "command-tree", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.14",
    "syrupy>=4.0",
    "genbadge[coverage]>=1.1",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Documentation = "https://click-prism.readthedocs.io/"
Source = "https://github.com/bertpl/click-prism"
Changelog = "https://github.com/bertpl/click-prism/blob/main/CHANGELOG.md"
Issues = "https://github.com/bertpl/click-prism/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["click_prism"]

[tool.hatch.build.targets.wheel]
packages = ["click_prism"]
